Added git pull and updated targetfile end point to have git branch
